Small fixes (including blurriness fix)

--- a/styles/components/dashboard/_dashboard.scss
+++ b/styles/components/dashboard/_dashboard.scss
@@ -86,9 +86,7 @@
     margin: 0 0 calc(#{$l-size} * 2) 0;
     box-shadow: 0px 8px 13px -4px rgba(0, 0, 0, 0.75);
     transform-origin: center top;
-    transform: scale(0.73) perspective(1px);
-    backface-visibility: hidden !important;
-    -webkit-font-smoothing: subpixel-antialiased;
+    transform: scale(.73) perspective(1px);
     width: inherit;
     margin-left: auto;
     margin-right: auto;
